syntax = "proto3";

package product;

option go_package = "/product";

service ProductCatalogService{
  rpc ListProduct(ListProductReq) returns (ListProductResp) {};
  rpc GetProduct(GetProductReq) returns (GetProductResp) {};
  rpc SearchProduct(SearchProductReq) returns (SearchProductResp) {};
  rpc ReduceProduct(ReduceProductReq) returns (ReduceProductResp) {}
}

message ListProductReq{
  int32 page = 1;
  int32 page_size = 2;
  string category_name = 3;
}
message Product{
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;

  repeated string categories = 6;
  uint32 quantity = 7;
}

message ListProductResp{
  repeated Product products = 1;
}

message GetProductReq{
  uint32 id = 1;
}

message GetProductResp{
  Product product = 1;
}

message SearchProductReq{
  string query = 1;
}

message SearchProductResp{
  repeated Product results = 1;
}

message ReduceProducts{
  uint32 id = 1;
  uint32 quantity = 2;
}

message ReduceProductReq{
  repeated ReduceProducts products = 1;
}

message ReduceProductResp{
  bool succeed = 1;
}